--- a/dubbo/pom.xml
+++ b/dubbo/pom.xml
@@ -223,6 +223,11 @@
 		</dependency>
 		<dependency>
 			<groupId>com.alibaba</groupId>
+			<artifactId>dubbo-registry-configserver</artifactId>
+			<version>${project.parent.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.alibaba</groupId>
 			<artifactId>dubbo-monitor-default</artifactId>
 			<version>${project.parent.version}</version>
 		</dependency>
