--- a/dubbo-demo/dubbo-demo-provider/src/test/resources/dubbo.properties
+++ b/dubbo-demo/dubbo-demo-provider/src/test/resources/dubbo.properties
@@ -15,8 +15,8 @@
 ##
 dubbo.container=log4j,spring
 dubbo.application.name=demo-provider
-dubbo.application.owner=william
-dubbo.registry.address=multicast://224.5.6.7:1234
+dubbo.application.owner=cmbc
+dubbo.registry.address=configserver://127.0.0.1:19999
 #dubbo.registry.address=zookeeper://127.0.0.1:2181
 #dubbo.registry.address=redis://127.0.0.1:6379
 #dubbo.registry.address=dubbo://127.0.0.1:9090
@@ -24,5 +24,5 @@ dubbo.registry.address=multicast://224.5.6.7:1234
 dubbo.protocol.name=dubbo
 dubbo.protocol.port=20880
 dubbo.service.loadbalance=roundrobin
-#dubbo.log4j.file=logs/dubbo-demo-consumer.log
-#dubbo.log4j.level=WARN
+dubbo.log4j.file=logs/dubbo-demo-provider.log
+dubbo.log4j.level=INFO
