--- a/dubbo-registry/dubbo-registry-configserver/pom.xml
+++ b/dubbo-registry/dubbo-registry-configserver/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.alibaba</groupId>
 		<artifactId>dubbo-registry</artifactId>
-		<version>2.4.9</version>
+		<version>2.5.4-SNAPSHOT</version>
 	</parent>
 	<artifactId>dubbo-registry-configserver</artifactId>
 	<packaging>jar</packaging>
