1.update the configserver-registry

--- a/dubbo-admin/src/main/webapp/WEB-INF/dubbo.properties
+++ b/dubbo-admin/src/main/webapp/WEB-INF/dubbo.properties
@@ -1,3 +1,3 @@
-dubbo.registry.address=zookeeper://127.0.0.1:2181
+dubbo.registry.address=configserver://127.0.0.1:19999
 dubbo.admin.root.password=root
 dubbo.admin.guest.password=guest
